# Subway_Congestion

./: README.md  api_def.json  kubernetes_init.md
Api_go/: db.go  line_counting.go  line_inform.go  station_counting.go  stations_of_line.go
Api_go/counting/: average_passenger.go  line_counting.go  main.go  station_counting.go  types.go  utils.go
Api_go/counting/docs/: docs.go  swagger.json  swagger.yaml
Api_go/get_methode/: db.go  main.go  post_alighting.go  post_boarding.go  post_line_detail.go  post_station_detail.go  types.go
Api_go/inform/: line_inform.go  main.go  stations_of_line.go  types.go
Api_go/inform/docs/: docs.go  swagger.json  swagger.yaml
Api_go/post_methode/: main.go  post_alighting.go  post_boarding.go  post_line_detail.go  post_station_detail.go
Api_go/post_methode/docs/: docs.go  swagger.json  swagger.yaml
Api_rust/: .env  Cargo.toml
Api_rust/src/: db.rs  functions.rs  main.rs  models.rs  routes.rs
DB/: db.sql  functions.sql  trigger.sql
Simulation/: line_station.json  simulator.py
cluster/api-rust/: 01-api-rust-deployment.yaml  02-api-rust-service.yaml
cluster/database/: 01-postgres-secret.yaml  02-postgres-pvc.yaml  03-postgres-deployment.yaml  04-postgres-service.yaml
cluster/hadoop_spark/: data-node-service.yaml  data-node-stateful.yaml  name-node-service.yaml  name-node-stateful.yaml  spark-master-deployment.yaml  spark-master-service.yaml  spark-worker-deployment.yaml  spark-worker-service.yaml
cluster/simulation_app/: 01-simulator-deployment.yaml  02-simulator-service.yaml
(+7 files in other folders)
