[package]
name = "Api_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
diesel = { version = "1.4", features = ["postgres"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
rocket_sync_db_pools = { version = "0.1", features = ["diesel_postgres_pool"] }